fix: fix Header menu overflow

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,6 +34,7 @@
   @media screen and(max-width: $screen-md) {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
 }
 
